--- a/js-for-net-developers/zukunft.html
+++ b/js-for-net-developers/zukunft.html
@@ -20,35 +20,43 @@
 <body>
   <div id="presentation">
     <div class="slide coverslide">
-      <h1>JavaScript für .NET-Entwickler</h1>
+      <h1>Die Zukunft von JavaScript</h1>
       <div class="footer">
         <p>12. Juli 2011</p>
         <p>Andreas Schlapsi - <a href="http://www.andreas-schlapsi.at">http://www.andreas-schlapsi.at</a></p>
       </div>
     </div>
 
-    <div class="slide single">
-      <h1>Wer hat schon in JavaScript programmiert?</h1>
-    </div>
-
-    <div class="slide single">
-      <h1>Und wer versteht die Objektorientierung á la JavaScript?</h1>
-    </div>
-
-    <div class="slide single">
-      <h1>Und wer weiß immer, worauf <code>this</code> zeigt?</h1>
+    <div class="slide">
+      <h1>Aktuelle Versionen</h1>
+      <ul>
+        <li>JavaScript: 1.8</li>
+        <li>ECMAScript: 5</li>
+      </ul>
     </div>
 
     <div class="slide">
-      <a name="agenda">
-      <h1>Agenda</h1>
+      <h1>Project Harmony</h1>
       <ul>
-        <li><a href="einleitung.html">Warum sollte ich mir JavaScript antun?</a></li>
-        <li><a href="javascript.html">JavaScript - Die Programmiersprache</a></li>
-        <li><a href="server.html">Serverseitige JavaScript-Programmierung</a></li>
-        <li><a href="coffeescript.html">CoffeeScript</a></li>
-        <li><a href="tools.html">Tools und Libraries</a></li>
-        <li><a href="zukunft.html">Zukunft von JavaScript</a></li>
+        <li>ECMAScript 4 sollte umfangreiche Änderungen bringen (z.B. Klassen).</li>
+        <li>Unterstützt von Google, Opera, Adobe, Mozilla, ...</li>
+        <li>Am Widerstand von Yahoo und Microsoft gescheitert.</li>
+        <li>Kleinere Änderungen: ECMAScript 3.1</li>
+        <li>Weitere Änderungen: ECMAScript 5</li>
+        <li>Neue Konzepte und Sprachfeatures: Harmony</li>
+      </ul>
+    </div>
+
+    <div class="slide">
+      <h1>Mögliche Features für Harmony</h1>
+      <ul>
+        <li>Klassen</li>
+        <li>Modulsystem</li>
+        <li>Optionale Typannotierungen, statische Typisierung, möglicherweise strukturelles Typsystem</li>
+        <li>Generatoren und Iteratoren (für .NET-Entwickler: Iteratoren und Enumeratoren)</li>
+        <li>"Destructuring Assignment"</li>
+        <li>Algebraische Datentypen</li>
+        <li>Mehr Features für JavaScript als Compiler-Target (z.B. CoffeeScript)</li>
       </ul>
     </div>
   </div>
