--- a/pyugat/20161117-advanced-unit-testing/index.html
+++ b/pyugat/20161117-advanced-unit-testing/index.html
@@ -30,7 +30,7 @@
 				<!-- Slides are separated by newline + three dashes + newline, vertical slides identical but two dashes -->
 				<section data-markdown data-separator="^\n---\n$" data-separator-vertical="^\n--\n$" data-separator-notes="^Notes:" data-transition-speed="fast">
 					<script type="text/template">
-						# Real-World Unit Testing in Python
+						# Advanced Unit Testing in Python
 
 						Notes:
 
